<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextRutInspector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rut_del_inspector2"
        android:inputType="text"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/editTextNombreLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_de_local2"
        android:inputType="text"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/editTextDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripci_n2"
        android:inputType="textMultiLine"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/editTextInfraccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripci_n_de_infraccion2"
        android:inputType="textMultiLine"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textViewFolio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/folio"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:id="@+id/buttonActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actualizar2"
        android:layout_gravity="center" />

</LinearLayout>
